# bd-data

./: .gitignore  README.md  bd-data.xpr  build.sh  pyproject.toml
data/editions/: Baedeker-Indien_a0001.xml  Baedeker-Indien_a0002.xml  Baedeker-Indien_a0003.xml  Baedeker-Indien_a0004.xml  Baedeker-Indien_i0001.xml  Baedeker-Indien_i0002.xml  Baedeker-Indien_i0003.xml  Baedeker-Indien_i0004.xml  Baedeker-Indien_i0005.xml  Baedeker-Indien_i0006.xml  Baedeker-Indien_i0007.xml  Baedeker-Indien_i0008.xml  Baedeker-Indien_i0009.xml  Baedeker-Indien_i0010.xml  Baedeker-Indien_i0011.xml  Baedeker-Indien_i0012.xml  Baedeker-Indien_i0013.xml  Baedeker-Indien_i0014.xml  Baedeker-Indien_i0015.xml  Baedeker-Indien_i0016.xml  Baedeker-Indien_i0017.xml  Baedeker-Indien_i0018.xml  Baedeker-Indien_i0019.xml  Baedeker-Indien_i0020.xml  Baedeker-Indien_i0021.xml  Baedeker-Indien_i0022.xml  Baedeker-Indien_i0023.xml  Baedeker-Indien_i0024.xml  Baedeker-Indien_i0025.xml  Baedeker-Indien_i0026.xml  Baedeker-Indien_i0027.xml  Baedeker-Indien_i0028.xml  Baedeker-Indien_i0029.xml  Baedeker-Indien_i0030.xml  Baedeker-Indien_i0031.xml  Baedeker-Indien_i0032.xml  Baedeker-Indien_i0033.xml  Baedeker-Indien_i0034.xml  Baedeker-Indien_i0035.xml  Baedeker-Indien_i0036.xml  (+2977 more)
data/meta/: about.xml
src/: __init__.py  add_header.py  config.py  header_template.xml  split.py  utils.py
src/templates/: indien.xml  kleinasien.xml  mittelmeer.xml  nordamerika.xml  palaestina.xml
src/utils/: milestone.py
